upgrade deps, fix scrollbar background

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -25,6 +25,7 @@
 
 /* custom scrollbar */
 ::-webkit-scrollbar {
+	background-color: var(--background);
 	width: 16px;
 }
 
